<resources>
    <string name="app_name">Cadastro</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="exemplo">Ex: 12–93456–7890</string>
    <string name="email">E-mail</string>
    <string name="ingressar_lista">Ingressar a lista de e-mail ?</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string-array name="lista_uf">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Gross</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
</resources>